--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "esewajs": "^1.0.12",
+    "framer-motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
