--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.2.0",
     "esewajs": "^1.0.12",
     "framer-motion": "^12.6.2",
+    "lucide-react": "^0.501.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
@@ -27,6 +28,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-type-animation": "^3.2.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
     "uuid": "^11.1.0"
   },
