--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "resend": "^4.1.2",
+    "socket.io": "^4.8.1",
     "twilio": "^5.5.1"
   }
 }
