--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "crypto-js": "^4.2.0",
     "esewajs": "^1.0.12",
     "framer-motion": "^12.6.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.501.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
